[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glview"
dynamic = ["version"]
description = "Lightning-fast image viewer with smooth zooming & panning."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Tomi Aarnio", email = "tomi.p.aarnio@gmail.com"},
]
dependencies = [
  "numpy>=2.2.6",
  "scipy>=1.17",
  "pyglet>=2.1.9",
  "psutil>=5.9.4",
  "moderngl>=5.12.0",
  "piexif>=1.1.3",
  "imgio>=1.7.3",
  "imsize>=1.11.0",
  "natsort>=8.4.0",
  "pqdm>=0.2.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.urls]
Homepage = "http://github.com/toaarnio/glview"

[project.scripts]
glview = "glview:main"

[project.gui-scripts]
glview-launcher = "glview.winlaunch:main"

[tool.hatch.version]
path = "glview/version.py"

[tool.hatch.build]
include = ["glview"]

[tool.ruff]
line-length = 130
